fixed the supper-club dimension

--- a/ella.html
+++ b/ella.html
@@ -120,8 +120,8 @@
                 <div class="menu">
                     <div class="menu-content">
                         <img src="asset/images/Dark and Moody product photography by Revised Edition.jpeg" alt="">
-                        <h1>SUPPER CLUB</h1>
-                        <p style="font-family: 'DM Serif Display', serif;">❝ Once a month, Chef & Pitmaster Rob
+                        <h1>SUPPER-CLUB</h1>
+                        <p style="font-family: 'DM Serif Display', serif;">❝ Once a month,Pitmaster Rob
                             Sonderman presents a new 4-course dine-in experience that
                             goes
                             beyond our regular offerings and puts a smoky mouth-tasty supper.❞
