--- a/ella.html
+++ b/ella.html
@@ -124,7 +124,7 @@
                         <p style="font-family: 'DM Serif Display', serif;">❝ Once a month,Pitmaster Rob
                             Sonderman presents a new 4-course dine-in experience that
                             goes
-                            beyond our regular offerings and puts a smoky mouth-tasty supper.❞
+                            beyond ourgi offerings and puts a smoky mouth-tasty supper.❞
                         </p>
                         <button>GET YOUR TICKETS</button>
                     </div>
